--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -285,11 +285,11 @@
             <nav>
                 <div class="nav-wrapper pink accent-1" style="margin-top:20px">
                     <div class="input-field">
-                            <input type="search" id="gsearch" name="gsearch">
-                            <label for="search" class="label-icon"> <i class="material-icons">search</i></label>
-                            {{!-- <input type="submit"> --}}
-                            <i class="material-icons">close</i>
-                        </div>
+                        <input type="search" id="gsearch" name="gsearch">
+                        <label for="search" class="label-icon"> <i class="material-icons">search</i></label>
+                        {{!-- <input type="submit"> --}}
+                        <i class="material-icons">close</i>
+                    </div>
                 </div>
                 <div style="text-align:right">
                     <button id="clear-search"
@@ -315,6 +315,8 @@
             }
         }
     </script>
+
+    {{!-- search script --}}
 
     <script>
         const search = document.querySelector('#gsearch');
@@ -521,7 +523,7 @@
                                                 {{!-- Field 3 --}}
                                                 <b><label for="tuluble">Amount Available:</label></b>
                                                 <input type="number" name="userInput3" id="userInput3"
-                                                    value="{{this.amt}} pattern="^[a-zA-Z0-9\s]*$">
+                                                    value="{{this.amt}}" pattern="^[a-zA-Z0-9\s]*$">
                                                 <p> </p>
 
                                                 {{!-- Field 4 --}}
