--- a/views/archive.hbs
+++ b/views/archive.hbs
@@ -61,6 +61,7 @@
                         </div>
                     </nav>
                 </div>
+                <p>&nbsp;</p>
 
 
                     <script>
@@ -198,6 +199,7 @@
                             </nav>
                         </div>
 
+                        <p>&nbsp;</p>
                         <script>
 
                             console.log("HELLOOOOOO");
