--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -70,9 +70,11 @@
             </select>
         </div>
 
+        <p>&nbsp;</p>
+
 
         <div class="col s12 m4 l2">
-            <a href="#terms" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add</a>
+            <a href="#terms" class="btn waves-effect waves-luluble-pink luluble-pink modal-trigger">Add an Ingredient</a>
             <div class="modal" id="terms">
                 <div style="padding: 5% 5% 5% 5%">
                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
